tests/myTests/parserTests/pass/test1.c
#include "TEST[1] -> Expected: Pass"
#include "Tests: Struct declarations"
struct my {
    int x;
    char z;
    void a;
};

struct my {
    struct yours b;
};
