tests/myTests/parserTests/fail/test4.c
#include "Test[4] -> Expected: Fail"
#include "Tests: Struct decl with no sc"

struct _struct {
    void a;
}